Issue #11921 - fix the z-index of dragable elements and the destination after delete

--- a/profile/modules/apps/os_widgets/css/layout.form.css
+++ b/profile/modules/apps/os_widgets/css/layout.form.css
@@ -70,6 +70,7 @@ nav.ui-sortable-helper ul.menu {
   background-color: #444;
   color: #ddd;
   padding: 5px;
+  z-index: 10000 !important;
 }
 
 #block-list h2.sr-only,
